static/media/less/core.less
/* ... */
.upload-list {
	list-style: none;
	margin: 20px 0;

	li {
		margin: 5px 0 0;
	}

	.details {
		position: relative;

		.meta {
			position: relative;
			z-index: 1;
			padding: 3px 10px;
		}

		.filename {
			font-weight: bold;
		}

		.progress {
			position: absolute;
			top: 0;
			left: 0;
			right: 0;
			height: 100%;

			.bar {
				opacity: 0.5;
			}
		}
	}
}
ul.thumbnails {
	li {
		.thumbnail {
			margin: 0 0 0 0;

			& > a img {
				display: block;
				width: 210px;
				height: 210px;
				background-image: url('../img/badge-default.png');
			}

			a.show-tooltip {
				display: none;
			}

			.caption {
				p:first-child {
					height: 40px;
				}
				.badge-description {
					height: 40px;
				}
			}

      .playlist-bar,
      .item-actions {
        form {
          display: inline-block;
        }
      }

			&[class*="state-"] {
				position: relative;
				padding-top: 2.5em;

				.state {
					position: absolute;
					top: 0;
					left: 0;
					right: 0;
					margin: 0;
					padding: 3px 10px;
					color: #FFF;
					background: #999;
					text-align: center;
					text-transform: uppercase;
					font-size: 0.85em;
					font-weight: bold;
					-webkit-border-radius: 3px 3px 0 0;
					-moz-border-radius: 3px 3px 0 0;
					border-radius: 3px 3px 0 0;
					border-bottom: solid 2px #666;
					white-space: pre;
					overflow: hidden;
					text-overflow: ellipsis;
					text-shadow: 0 0 1px rgba(0, 0, 0, 0.6);

					&::before {
						content: "";
						display: inline-block;
						width: 20px;
						height: 20px;
						background: url('../img/application-states.png');
						vertical-align: bottom;
						margin-right: 5px;
					}
				}
			}

			&.state-waiting .state {
				background-color: #FAAD54;
				border-color: #E29E5A;

				&::before {
					background-position: -20px 0;
				}
			}

			&.state-denied .state,
			&.state-rejected .state {
				background-color: #931A1D;
				border-color: #751A21;

				&::before {
					background-position: -40px 0;
				}
			}

			&.state-submitted .state {
				background-color: #EDD262;
				border-color: #79692A;

				&::before {
					background-position: -60px 0;
				}
			}

			&.state-reviewed .state {
				background-color: #D56449;
				border-color: #77311A;

				&::before {
					background-position: -80px 0;
				}
			}

			&.state-accepted .state,
			&.state-awarded .state {
				background-color: #8EBFDC;
				border-color: #04465E;

				&::before {
					background-position: -100px 0;
				}
			}
		}
	}
	li:nth-child(2n+2) {
		figure.thumbnail {
			& > a img {
				background-position: 0 -210px;
			}
		}
	}
	li:nth-child(3n+3) {
		figure.thumbnail {
			& > a img {
				background-position: -210px 0px;
			}
		}
	}
	li:nth-child(4n+4) {
		figure.thumbnail {
			& > a img {
				background-position: -210px -210px;
			}
		}
	}
}

.recommendations {
  .category {
    &.science { .category-header h4 { background-position: 0px 0px; } }
    &.technology { .category-header h4 { background-position: -194px 0px; } }
    &.engineering { .category-header h4 { background-position: -388px 0px; } }
    &.art { .category-header h4 { background-position: -582px 0px; } }
    &.math { .category-header h4 { background-position: -776px 0px; } }
  }
  .category-header {
    background-image: url(../img/criteria-badges.png);
    height: 226px;
    background-position: 194px 53px;
    background-repeat: no-repeat;
    h4 {
      .hide-text;
      height: 226px;
      width: 190px;
      background-image: url(../img/steam.png);
    }
  }
}

/*Password fields with feedback bar*/
input[type="password"].metered {
	padding-bottom: 9px;

	& + .password-meter {
		border: solid 1px #CCC;
		border-top: none;
		height: 6px;
		margin: -6px 0 10px;
		-webkit-border-radius: 0 0 4px 4px;
		-moz-border-radius: 0 0 4px 4px;
		border-radius: 0 0 4px 4px;
		-moz-box-sizing: border-box;
		box-sizing: border-box;
		position: relative;
		overflow: hidden;
		-webkit-transition: border linear .2s;
		-moz-transition: border linear .2s;
		-o-transition: border linear .2s;
		transition: border linear .2s;
	}

	& + .password-meter .bar {
		border-radius: 0 0 0 3px;
		overflow: hidden;
	}

	&:focus + .password-meter {
		border-color: rgba(82, 168, 236, 0.8);
	}

	&:focus:invalid + .password-meter {
		border-color: #ee5f5b;
	}

	&:focus:invalid:focus + .password-meter {
		border-color: #e9322d;
	}
}

.control-group.error input[type="password"].metered {
	& + .password-meter,
	&:focus + .password-meter {
		border-color: #DF382C;
	}
}
/* ... */

